monticore-generator/src/test/resources/cocos/invalid/A4009/A4009c.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4009;

grammar A4009c extends mc.grammars.types.TestTypes {

  token QualifiedName = "a";

}
